--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,10 +7,23 @@ spring:
     password: 666666
     url: jdbc:mysql://localhost:3306/java?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    hostname: 127.0.0.1
+    port: 6379
+    database: 0
+    password:
+    lettuce:
+      max-active: 8
+      max-wait: -1
+      max-idle: 8
+      min-idle: 0
+    timeout: 5000
 
 mybatis:
   mapper-locations: classpath:com/arrietty/mapper/*Mapper.xml
   type-aliases-package: com.arrietty.entity
+
+
 
 logging:
   pattern:
