--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     username: root
-    password:
-    url: jdbc:mysql://localhost:3306/java?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    password: 123
+    url: jdbc:mysql://localhost:3306/arrietty_fat_db?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     hostname: 127.0.0.1
@@ -20,7 +20,7 @@ spring:
     timeout: 5000
 
 mybatis:
-  mapper-locations: classpath:com/arrietty/mapper/*Mapper.xml
+  mapper-locations: classpath:/mapper/*Mapper.xml
   type-aliases-package: com.arrietty.entity
 
 
