added api consts, modified .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ log/
 ##############################
 .DS_Store
 
+##############################
+## Configuration
+##############################
+*/src/main/resources/*.yml
