--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,20 @@
             <version>2.8.0</version>
         </dependency>
 
+
+        <!-- Https client -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
+
     </dependencies>
 <!--    only used when auto generating mappers-->
 <!--    <build>-->
