--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ log/
 # Configuration
 src/main/resources/mybatis-generator/
 src/main/resources/application-dev.yml
-
+src/main/resources/application.yml
