--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ server:
 spring:
   datasource:
     username: root
-    password: 123
+    password: 12345678
     url: jdbc:mysql://localhost:3306/arrietty_fat_db?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
