--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                     <!--generatorConfig.xml位置-->
                     <configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
-                    <overwrite>true</overwrite>
+                    <overwrite>false</overwrite>
                 </configuration>
                 <executions>
                     <execution>
