--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ hs_err_pid*
 
 
 ##############################
+## static
+##############################
+src/main/resources/public/
+
+##############################
 ## Maven
 ##############################
 target/
