--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -58,6 +58,7 @@ auth:
   access-token-obtain-url: https://localhost:8001/app/rest/keycloak/token?token=%s
   user-info-obtain-url: https://localhost:8001/app/rest/keycloak/welcome
   client-id: test
+  disable-auto-create-new-user: false
 
 file:
   base-image-directory: C:/Users/yz391/Pictures/arrietty
