--- a/pom.xml
+++ b/pom.xml
@@ -130,46 +130,46 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <!--添加mybatis generator maven插件-->
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.5</version>
-                <configuration>
-                    <!--generatorConfig.xml位置-->
-                    <configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
-                    <verbose>true</verbose>
-                    <overwrite>true</overwrite>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>Generate MyBatis Artifacts</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                    </execution>
-                </executions>
-                <!--此处必须添加mysql驱动包-->
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <scope>runtime</scope>
-                        <version>5.1.46</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.mybatis.generator</groupId>-->
+<!--                <artifactId>mybatis-generator-maven-plugin</artifactId>-->
+<!--                <version>1.3.5</version>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash;generatorConfig.xml位置&ndash;&gt;-->
+<!--                    <configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>-->
+<!--                    <verbose>true</verbose>-->
+<!--                    <overwrite>true</overwrite>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>Generate MyBatis Artifacts</id>-->
+<!--                        <goals>-->
+<!--                            <goal>generate</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>generate-sources</phase>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                &lt;!&ndash;此处必须添加mysql驱动包&ndash;&gt;-->
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>mysql</groupId>-->
+<!--                        <artifactId>mysql-connector-java</artifactId>-->
+<!--                        <scope>runtime</scope>-->
+<!--                        <version>5.1.46</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
+<!--            </plugin>-->
         </plugins>
 
         <resources>
             <resource>
-                <!-- avoid wrong parsing of *.keystore files by maven -->
-                <directory>src/main/resources</directory>
                 <filtering>false</filtering>
+                <directory>src/main/resources/</directory>
+                <excludes>
+                    <exclude>mybatis-generator/**</exclude>
+                </excludes>
             </resource>
         </resources>
     </build>
-
-
 
 </project>
