--- a/pom.xml
+++ b/pom.xml
@@ -185,9 +185,9 @@
             <resource>
                 <filtering>false</filtering>
                 <directory>src/main/resources/</directory>
-                <excludes>
-                    <exclude>mybatis-generator/**</exclude>
-                </excludes>
+<!--                <excludes>-->
+<!--                    <exclude>mybatis-generator/**</exclude>-->
+<!--                </excludes>-->
             </resource>
         </resources>
     </build>
